fixed header and modal z-indexes

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 5;
 
     padding-top: 24px;
     padding-bottom: 24px;
@@ -724,6 +724,7 @@ footer h3 {
 
 .backdrop{
     position:fixed;
+    z-index: 10;
     top: 0;
     left: 0;
 
